changed the tutorial

--- a/20221130_Image_Class_Workshop/image_classification_tutorial.ipynb
+++ b/20221130_Image_Class_Workshop/image_classification_tutorial.ipynb
@@ -130,6 +130,8 @@
       "source": [
         "## Do it all over again\n",
         "\n",
+        "<div class = \"alert alert-block alert-info\">*You can skip this section if all you are interested is putting the models to use: you should already have a `models` folder with a couple of pre-trained models. If you want to train the models yourself, [all the training data is available in this `.zip` file](https://drive.google.com/file/d/1YtRBLjBSzzFcuGVmiOznuwF1MoSolQnJ/view?usp=sharing)*</div>\n",
+        "\n",
         "Now that we are relatively familiar with what *training* is, and we know how to work with Teachable Machine, it's time to train a couple of models that can actually be useful to our problem -- i.e., cataloguing a collection of artworks by medium and subject matter.\n",
         "\n",
         "A good model starts with good training data, and while we cannot guarantee that the data we're using is *good*, we can make sure it is adequate to our purposes. (And the only reason why we are not too concerned with the quality of our training set is because we are just doing this as a tutorial -- if we were to put this model to actual use, ensuring the quality of the training data is paramount).\n",
@@ -141,32 +143,11 @@
         "3. Test the model in browser (with a random google image)\n",
         "4. Export the model to your machine:\n",
         "  1. Click the 'Export Model' button at the top of the 'Preview Window'\n",
-        "  1. Select the 'Tensorflow' tab (*not* Tensorflow.js)\n",
-        "  1. Make sure you have 'Keras' selected in the 'Model Conversion Type'\n",
-        "  1. Click 'Download my model' and save it to someplace where you can find it (converting the model will take a few minutes). The result will be a zip file containing two files: one will be a `.h5` which is the model itself, the other is a text file with the labels for each category. Rename the zipfile so that you can distinguish between both models.\n",
+        "  2. Select the 'Tensorflow' tab (*not* Tensorflow.js)\n",
+        "  3. Make sure you have 'Keras' selected in the 'Model Conversion Type'\n",
+        "  4. Click 'Download my model' and save it to someplace where you can find it (converting the model will take a few minutes). The result will be a zip file containing two files: one will be a `.h5` which is the model itself, the other is a text file with the labels for each category. Rename the zipfile so that you can distinguish between both models.\n",
         "\n",
         "Repeat the process for the `Wiki_Art_dataset`.\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XLsVFsYnH1hz"
-      },
-      "source": [
-        "## Upload the models to Google Colab\n",
-        "\n",
-        "Now it's time to do some coding. We'll start by uploading the model to our Google Colab environment, so that they are available to our code.\n",
-        "\n",
-        "1. On the left hand side of your screen, you should be able to see four small icons. Click the last one, the file system.\n",
-        "1. Right-click on the space that appears and click 'New Folder'\n",
-        "1. Rename the new folder to 'models'\n",
-        "1. In your machine, extract the models you exported, each to their own folder.\n",
-        "1. Upload those folders to the `models` folder in the Google Colab: click on the `models` folder, then on the three dots; create two new folders, then upload the contents of each model to each of those folders. At the end, your file system should look something like this:\n",
-        "\n",
-        "![](https://github.com/tiagosousagarcia/jumpstart-tutorials/blob/main/lesson-images/file_structure.png?raw=true)\n",
-        "\n",
         "\n"
       ]
     },
