corrections to tutorial

--- a/20221130_Image_Class_Workshop/image_classification_tutorial.ipynb
+++ b/20221130_Image_Class_Workshop/image_classification_tutorial.ipynb
@@ -130,7 +130,7 @@
       "source": [
         "## Do it all over again\n",
         "\n",
-        "<div class = \"alert alert-block alert-info\">*You can skip this section if all you are interested is putting the models to use: you should already have a `models` folder with a couple of pre-trained models. If you want to train the models yourself, [all the training data is available in this `.zip` file](https://drive.google.com/file/d/1YtRBLjBSzzFcuGVmiOznuwF1MoSolQnJ/view?usp=sharing)*</div>\n",
+        "<div class = \"alert alert-block alert-info\">You can skip this section if all you are interested is putting the models to use: you should already have a `models` folder with a couple of pre-trained models. If you want to train the models yourself, [all the training data is available in this `.zip` file](https://drive.google.com/file/d/1YtRBLjBSzzFcuGVmiOznuwF1MoSolQnJ/view?usp=sharing)</div>\n",
         "\n",
         "Now that we are relatively familiar with what *training* is, and we know how to work with Teachable Machine, it's time to train a couple of models that can actually be useful to our problem -- i.e., cataloguing a collection of artworks by medium and subject matter.\n",
         "\n",
